# lib/api-spec/openapi.yaml
@@ -535,6 +535,9 @@ components:
     Visibility:
       type: string
       enum: [private, public]
+    SelfieCorner:
+      type: string
+      enum: [top-left, top-right, bottom-left, bottom-right]
     VisibilityInput:
       type: object
       required: [visibility]
@@ -571,6 +574,10 @@ components:
           type: ["string", "null"]
         gifPath:
           type: ["string", "null"]
+        selfieCorner:
+          anyOf:
+            - $ref: "#/components/schemas/SelfieCorner"
+            - type: "null"
         chapters:
           type: array
           items:
@@ -606,6 +613,10 @@ components:
           type: boolean
         gifPath:
           type: ["string", "null"]
+        selfieCorner:
+          anyOf:
+            - $ref: "#/components/schemas/SelfieCorner"
+            - type: "null"
         chapters:
           type: array
           items:
@@ -657,6 +668,10 @@ components:
           type: ["string", "null"]
         gifPath:
           type: ["string", "null"]
+        selfieCorner:
+          anyOf:
+            - $ref: "#/components/schemas/SelfieCorner"
+            - type: "null"
         chapters:
           type: array
           items:
